# OT2Demo

./: .env  .gitignore  move_gripper  ot2_ssh_key  ot2_ssh_key.pub  prefect_OT2.py  pyproject.toml  sshclient.py  test.ipynb
backup/: generate_well_status.py  get_target_color.py  live_web_demo.py  live_webpage.py  optimization_algorithm.py  optimization_workflow.py  orchestrator.py  prefect_utils.py  sensor_util.py  session_id.txt  test.ipynb
demo/: 300_tip.json  ot2_demo.py  ot2_optic_hte_dilution.py  ot2_optic_hte_dilution_workflow.py  ot2_serial_dilution.py  ot_flex_demo.py  plate_process_spec.json
demo/optical_HTE_serial_dilution/: ot2_optic_hte_dilution_workflow.py  plate_1-2-3.json  plate_1-2.json  plate_96_dilution_1.csv  plate_96_dissolution.csv
examples/: oct28 demo loop.py
src/matterlab_opentrons/: OpenTronsControl.py  __init__.py  experiment_spec.py  sshclient.py  well_plate.py  well_plate_template.json  workflow.py
src/matterlab_opentrons.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ot_ssh_control.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
